--- a/src/app/propiedades/propiedades.component.scss
+++ b/src/app/propiedades/propiedades.component.scss
@@ -70,6 +70,13 @@
       }
     }
 
+    .filtro-banos{
+      label {
+        display: block;
+        font-size: 14px;
+      }
+    }
+
     .filtro-caracteristicas {
       label {
         display: block;
