--- a/src/app/propiedades/propiedades.component.css
+++ b/src/app/propiedades/propiedades.component.css
@@ -68,6 +68,11 @@
   font-size: 14px;
 }
 
+.listado-container .sidebar .filtro-banos label {
+  display: block;
+  font-size: 14px;
+}
+
 .listado-container .sidebar .filtro-caracteristicas label {
   display: block;
   font-size: 14px;
