--- a/src/app/propiedad/propiedad.component.html
+++ b/src/app/propiedad/propiedad.component.html
@@ -10,7 +10,7 @@
 
     <div class="inmueble-container">
       <div class="imagen-container">
-        <img src="../../assets/img/casaInicio.jpg" [alt]="inmueble.titulo" />
+        <img [src]="this.rutaImagen" [alt]="inmueble.titulo" />
       </div>
       <!-- Información del inmueble -->
       <div class="info-container">
