--- a/src/app/propiedades/propiedades.component.html
+++ b/src/app/propiedades/propiedades.component.html
@@ -4,7 +4,7 @@
 
 
 <div class="titulo">
-  <h2>105 casas y pisos en Arenal - Museo - Tetuán, Sevilla</h2>
+  <h2>1 piso en Bilbao</h2>
 </div>
 
 <div class="listado-container">
