--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,11 @@
       <img src="../../assets/img/idealista.svg" alt="logo-idealista" routerLink="/inicio"/>
     </div>
     <div class="enlaces">
-      <a class="anuncio-gratis"> Pon tu anuncio gratis</a>
+      <a class="anuncio-gratis" routerLink="/publicar-anuncio-info"> Pon tu anuncio gratis</a>
       <a class="enlace"> Tus Búsquedas</a>
       <a class="enlace"> Chat </a>
       <a class="enlace" routerLink="/perfil"> Iniciar Sesión</a>
+      
     </div>
   </div>
 </div>
