--- a/src/app/propiedad/propiedad.component.html
+++ b/src/app/propiedad/propiedad.component.html
@@ -14,15 +14,15 @@
       </div>
       <!-- Información del inmueble -->
       <div class="info-container">
-        <h1>{{ inmueble.titulo }}</h1>
+        <h1>{{ inmueble?.titulo }}</h1>
         <p class="ubicacion">
-          {{ inmueble.ubicacion }}<a href="#">Ver mapa</a>
+          {{ inmueble?.ubicacion }}<a href="#">Ver mapa</a>
         </p>
-        <p class="precio">{{ inmueble.precio | currency : "EUR" }}</p>
+        <p class="precio">{{ inmueble?.precio | currency : "EUR" }}</p>
         <p class="detalles">
-          {{ inmueble.tamanio }} m² | {{ inmueble.n_habitaciones }} hab | Planta
-          {{ inmueble.planta }}
-          {{ inmueble.ascensor ? "con ascensor" : "sin ascensor" }}
+          {{ inmueble?.tamanio }} m² | {{ inmueble?.n_habitaciones }} hab | Planta
+          {{ inmueble?.planta }}
+          {{ inmueble?.ascensor ? "con ascensor" : "sin ascensor" }}
         </p>
 
         <div class="acciones">
@@ -32,7 +32,7 @@
         </div>
 
         <h2>Comentario del anunciante</h2>
-        <p class="descripcion">{{ inmueble.descripcion }}</p>
+        <p class="descripcion">{{ inmueble?.descripcion }}</p>
       </div>
     </div>
     <!-- Panel de contacto -->
